create business-svc module and move some services there

--- a/pom.xml
+++ b/pom.xml
@@ -893,6 +893,7 @@
     <module>common</module>
     <module>mt-data</module>
     <module>mt-engine</module>
+    <module>business-svc</module>
     <module>server</module>
   </modules>
 </project>
