--- a/pom.xml
+++ b/pom.xml
@@ -354,7 +354,13 @@
         <scope>runtime</scope>
       </dependency>
 
-      <!-- hibernate -->
+      <!-- hibernate and jpa -->
+      <dependency>
+        <groupId>org.hibernate.javax.persistence</groupId>
+        <artifactId>hibernate-jpa-2.1-api</artifactId>
+        <version>1.0.0.Final</version>
+        <scope>provided</scope>
+      </dependency>
       <dependency>
         <groupId>org.hibernate.common</groupId>
         <artifactId>hibernate-commons-annotations</artifactId>
