--- a/pom.xml
+++ b/pom.xml
@@ -775,6 +775,9 @@
               <phase>site</phase>
             </execution>
           </executions>
+          <dependencies>
+
+          </dependencies>
         </plugin>
 
         <plugin>
