file-upload: WIP

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -28,6 +28,10 @@
       <artifactId>jaxrs-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-multipart-provider</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>annotations</artifactId>
     </dependency>
