--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -7,7 +7,7 @@
     "check": "node scripts/check-engines",
     "js": "yarn run check && webpack",
     "test": "echo \"Error: no test specified\"",
-    "start": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "watch": "webpack-dev-server --mode development --debug --devtool cheap-module-source-map --output-pathinfo --history-api-fallback --hot --inline --progress --colors --port 3000",
     "build": "yarn run check && webpack --mode production --progress --colors "
   },
   "engines": {
@@ -24,12 +24,13 @@
   "devDependencies": {
     "@types/classnames": "2.2.3",
     "@types/crypto-js": "^3.1.38",
+    "@types/file-saver": "^1.3.0",
     "@types/history": "4.6.2",
     "@types/lodash": "^4.14.104",
     "@types/moment": "^2.13.0",
     "@types/node": "8.0.53",
-    "@types/react": "16.0.38",
-    "@types/react-dom": "16.0.4",
+    "@types/react": "16.4.6",
+    "@types/react-dom": "16.0.6",
     "@types/react-redux": "5.0.15",
     "@types/react-router": "4.0.18",
     "@types/react-router-dom": "^4.2.4",
@@ -37,10 +38,10 @@
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
     "@types/redux-thunk": "^2.1.0",
+    "@types/universal-cookie": "git+ssh://git@github.com:S64/types-universal-cookie.git#v2.1.2-2",
     "@types/webpack": "3.8.1",
     "@types/webpack-env": "1.13.2",
-    "antd": "^3.4.0",
-    "awesome-typescript-loader": "^4.0.1",
+    "awesome-typescript-loader": "^5.2.0",
     "check-engines": "^1.5.0",
     "css-loader": "0.28.9",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -67,17 +68,20 @@
     "webpack-manifest-plugin": "^2.0.0-rc.2"
   },
   "dependencies": {
+    "antd": "^3.6.5",
     "crypto-js": "^3.1.9-1",
+    "file-saver": "^1.3.8",
     "lodash": "4.17.5",
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
     "react-redux": "5.0.6",
     "react-router": "4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "3.7.2",
     "redux-actions": "2.2.1",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "universal-cookie": "^2.2.0"
   }
 }
