--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
     <jboss-el-api_3.0_spec.version>1.0.7.Final</jboss-el-api_3.0_spec.version>
     <javax.el.impl.version>3.0.1-b09</javax.el.impl.version>
     <powermock.version>1.6.6</powermock.version>
-    <okapi.version>0.33</okapi.version>
+    <okapi.version>0.35</okapi.version>
     <infinispan.version>8.1.4.Final</infinispan.version>
     <docker-maven-plugin.version>0.26.0</docker-maven-plugin.version>
     <icu4j.version>58.2</icu4j.version>
@@ -238,6 +238,25 @@
         <groupId>org.jboss.resteasy</groupId>
         <artifactId>jaxrs-api</artifactId>
         <version>3.0.12.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.resteasy</groupId>
+        <artifactId>resteasy-multipart-provider</artifactId>
+        <version>${resteasy.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.jboss.resteasy</groupId>
@@ -469,6 +488,12 @@
       </dependency>
 
       <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
         <version>1.10.1</version>
@@ -520,6 +545,13 @@
             <artifactId>slf4j-simple</artifactId>
           </exclusion>
         </exclusions>
+
+      </dependency>
+
+      <dependency>
+        <groupId>org.fedorahosted.tennera</groupId>
+        <artifactId>jgettext</artifactId>
+        <version>0.15.1</version>
       </dependency>
 
       <!-- kotlin -->
