--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -11,9 +11,8 @@
     "build": "yarn run check && webpack --mode production --progress --colors "
   },
   "engines": {
-    "node": ">=8.1.3",
-    "yarn": ">=1.5.1",
-    "npm": ">=5.0.3"
+    "node": ">=8.11.0",
+    "yarn": ">=1.7.0"
   },
   "keywords": [
     "magpie-mt",
