--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -61,7 +61,8 @@
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
     "typescript": "^2.8.1",
-    "webpack": "^4.0.1",
+    "webpack": "^4.16.2",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0",
     "webpack-manifest-plugin": "^2.0.0-rc.2"
@@ -71,6 +72,7 @@
     "lodash": "4.17.5",
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-redux": "5.0.6",
