--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -11,9 +11,8 @@
     "build": "yarn run check && webpack --mode production --progress --colors "
   },
   "engines": {
-    "node": ">=8.1.3",
-    "yarn": ">=1.5.1",
-    "npm": ">=5.0.3"
+    "node": ">=8.9.0",
+    "yarn": ">=1.7.0"
   },
   "keywords": [
     "magpie-mt",
@@ -22,64 +21,62 @@
   "author": "",
   "license": "LGPL-2.1",
   "devDependencies": {
-    "@types/classnames": "2.2.3",
     "@types/crypto-js": "^3.1.38",
-    "@types/history": "4.6.2",
+    "@types/history": "4.7.0",
     "@types/lodash": "^4.14.104",
     "@types/moment": "^2.13.0",
-    "@types/node": "8.0.53",
-    "@types/react": "16.0.38",
-    "@types/react-dom": "16.0.4",
-    "@types/react-redux": "5.0.15",
-    "@types/react-router": "4.0.18",
-    "@types/react-router-dom": "^4.2.4",
+    "@types/react": "16.4.7",
+    "@types/react-dom": "16.0.6",
+    "@types/react-redux": "6.0.5",
+    "@types/react-router": "4.0.30",
+    "@types/react-router-dom": "^4.3.0",
     "@types/redux": "^3.6.0",
-    "@types/redux-actions": "^2.2.4",
+    "@types/redux-actions": "^2.3.0",
     "@types/redux-logger": "^3.0.5",
     "@types/redux-thunk": "^2.1.0",
-    "@types/webpack": "3.8.1",
-    "@types/webpack-env": "1.13.2",
+    "@types/webpack": "4.4.8",
+    "@types/webpack-env": "1.13.6",
     "antd": "^3.4.0",
-    "awesome-typescript-loader": "^4.0.1",
+    "awesome-typescript-loader": "^5.2.0",
     "check-engines": "^1.5.0",
-    "css-loader": "0.28.9",
+    "css-loader": "1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
-    "postcss": "6.0.17",
+    "postcss": "7.0.2",
     "postcss-browser-reporter": "0.5.0",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.0",
+    "postcss-loader": "2.1.6",
     "postcss-reporter": "5.0.0",
-    "postcss-url": "7.3.0",
-    "react-hot-loader": "3.1.3",
-    "redux-api-middleware": "2.2.0",
+    "postcss-url": "7.3.2",
+    "react-hot-loader": "4.3.4",
+    "redux-api-middleware": "2.3.0",
     "redux-logger": "3.0.6",
-    "style-loader": "0.20.1",
+    "style-loader": "0.21.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
-    "typescript": "^2.8.1",
+    "typescript": "^3.0.1",
     "webpack": "^4.16.2",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.0.10",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.0",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "webpack-manifest-plugin": "^2.0.3"
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
-    "lodash": "4.17.5",
-    "moment": "2.20.1",
-    "moment-timezone": "0.5.14",
+    "lodash": "4.17.10",
+    "moment": "2.22.2",
+    "moment-timezone": "0.5.21",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-redux": "5.0.6",
-    "react-router": "4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "3.7.2",
-    "redux-actions": "2.2.1",
-    "redux-thunk": "2.2.0"
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "4.0.0",
+    "redux-actions": "2.6.1",
+    "redux-thunk": "2.3.0"
   }
 }
